# blogCodes2

./: buildCommand.txt
ANPR2/: CMakeLists.txt  anpr_recognizer.hpp  bbps_char_recognizer.cpp  bbps_char_recognizer.hpp  croatia_general_pattern_recognizer.hpp  croatia_general_plate_recognizer.cpp  croatia_general_plate_recognizer.hpp  fhog_localizer.cpp  fhog_trainer.cpp  fhog_trainer.hpp  grab_character.cpp  grab_character.hpp  license_plate_contour_attr.txt  license_plate_localizer.cpp  license_plate_localizer.hpp  main.cpp  morphology_localizer.cpp  morphology_localizer.hpp  prune_illegal_chars.cpp  prune_illegal_chars.hpp  readme.txt  segment_character.cpp  segment_character.hpp  test_box.xml  train_box.xml  train_chars.cpp  train_chars.hpp  utility.cpp  utility.hpp
ANPR2-build/: test_box.xml  train_box.xml
ANPR2/char_recognizer/: bbps_char_recognizer.cpp  bbps_char_recognizer.hpp  bbps_recognizer.cpp  bbps_recognizer.hpp
ANPR2/pattern_recognizer/: croatia_general_pattern_recognizer.cpp  identity_pattern.hpp
ANPR2/plate_localizer/: fhog_localizer.cpp  fhog_localizer.hpp  morphology_localizer.cpp  morphology_localizer.hpp
ANPR2/prune_chars/: prune_illegal_chars.cpp
ANPR2/segment_char/: segment_character.cpp
ANPR2/trainer/: fhog_trainer.cpp  fhog_trainer.hpp  train_chars.hpp
ANPR2/utility/: grab_character.hpp  utility.hpp
CBIR/: CBIR.pro  cbir_bovw.cpp  cbir_bovw.hpp  main.cpp  setting.json
analyze_contour_attr/: CMakeLists.txt  main.cpp
androidTest/: androidTest.pro  main.cpp  qml.qrc  simpleJNI.cpp  simpleJNI.hpp
asioTest/: .gitignore  asioTest.pro  dispatch00.cpp  dispatch00.hpp  exampleCollection00.cpp  exampleCollection00.hpp  getLocalHostAddr.cpp  getLocalHostAddr.hpp  main.cpp  mingw32.pri  noWork00.cpp  noWork00.hpp  post00.cpp  post00.hpp  post_00.hh  timer00.cpp  timer00.hpp  vc90_32.pri
async_camera_reader/: async_camera_reader.pro  main.cpp
async_vision_algorithm/: async_to_gray_algo.cpp  async_to_gray_algo.hpp  main.cpp  (+1 more)
cmakeTutorial/cmake00/: CMakeLists.txt  main.cpp
cmakeTutorial/cmakeQt5/: CMakeLists.txt
cmakeTutorial/cmakeQt5/incl/: whatever.h
cmakeTutorial/cmakeQt5/src/: CMakeLists.txt  main.cc  whatever.cc
face_recognition/: CMakeLists.txt  face_capture.cpp  face_capture.hpp  face_detector.cpp  face_detector.hpp  face_recognition.cpp  face_recognition.hpp  main.cpp
for_each_image_processing/: CMakeLists.txt  main.cpp
forum_quest/: CMakeLists.txt  extract_cow_number.cpp  extract_cow_number.hpp  features_utility.cpp  features_utility.hpp  forum.pro  hough_lines_polygon.cpp  hough_lines_polygon.hpp  main.cpp  mapping_files.cpp  mapping_files.hpp  marble_slab.cpp  marble_slab.hpp  so_obj_detect_00.cpp  so_obj_detect_00.hpp
image_augmentation_tools/: CMakeLists.txt  main.cpp  mainwindow.cpp
image_augmentation_tools/algo/: saliency_image_generator.cpp  saliency_image_generator.hpp
image_clean_up_tool/: CMakeLists.txt  change_wrong_image_suffix.cpp  change_wrong_image_suffix.hpp  change_wrong_image_suffix.ui  check_images_state.cpp  check_images_state.hpp  check_images_state.ui  cluster_image_viewer.cpp  cluster_image_viewer.hpp  cluster_image_viewer.ui  cluster_similar_images.cpp  cluster_similar_images.hpp  cluster_similar_images.ui  convert_label_img_labels.cpp  convert_label_img_labels.hpp  convert_label_img_labels.ui  convert_yolo_detect_results.cpp  convert_yolo_detect_results.hpp  convert_yolo_detect_results.ui  generate_image_list.cpp  generate_image_list.hpp  generate_image_list.ui  image_clean_up_tool.pro  image_cropper.cpp  image_cropper.hpp  image_cropper.ui  image_mover.cpp  image_mover.hpp  image_mover.ui  image_mover_mult.cpp  image_mover_mult.hpp  image_mover_mult.ui  labels_check.cpp  labels_check.hpp  labels_check.ui  labels_update.cpp  labels_update.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  (+19 more)
image_clean_up_tool/config/: config_utils.cpp  config_utils.hpp
image_clean_up_tool/roi/: custom_graphics_view_pixmap.cpp  custom_graphics_view_pixmap.hpp  roi_configure.cpp  roi_configure.hpp  roi_configure.ui  roi_configure_data_creator.cpp  roi_configure_data_creator.hpp  roi_shape.hpp  roi_view.cpp  roi_view.hpp  rubber_band_base.cpp  rubber_band_base.hpp  rubber_band_points.cpp  rubber_band_points.hpp  rubber_band_rect.cpp  rubber_band_rect.hpp
image_clean_up_tool/structure/: open_image_detector_info.hpp
image_clean_up_tool/ui/: widget_export_open_image_viewer_to_other_format.cpp  widget_export_open_image_viewer_to_other_format.hpp  widget_export_open_image_viewer_to_other_format.ui  widget_move_files_to_other_folder.cpp  widget_move_files_to_other_folder.hpp  widget_move_files_to_other_folder.ui  widget_open_image_viewer.cpp  widget_open_image_viewer.hpp  widget_open_image_viewer.ui
image_clean_up_tool/utils/: iterator_create.cpp  iterator_create.hpp  montage.cpp  utility.cpp  utility.hpp
image_converter/: CMakeLists.txt  main.cpp
image_hash/: CMakeLists.txt  better_test.cpp  hash_samples.cpp  phash_performance.cpp
object_tracking/: CMakeLists.txt  cnn_train_test.cpp  cnn_train_test.hpp  correlation_trackers.cpp  correlation_trackers.hpp  fixed_size_trackers.cpp  fixed_size_trackers.hpp  get_samples.cpp  get_samples.hpp  hsv_range_observer.cpp  hsv_range_observer.hpp  main.cpp  object_tracking_test.cpp  object_tracking_test.hpp  player_detector.cpp  player_detector.hpp  read_dataset.cpp  read_dataset.hpp  read_usc_pedestrian.cpp  read_usc_pedestrian.hpp  tiny_cnn_trainer.cpp  tiny_cnn_trainer.hpp
object_tracking/dataset_reader/: get_samples.cpp  read_Stanford40_pose.cpp  read_dataset.cpp  read_dataset.hpp  read_stanford40_pose.hpp  read_usc_pedestrian.cpp  read_usc_pedestrian.hpp
object_tracking/human_detector/: player_detector.cpp  tiny_cnn_human_detecotr.cpp  tiny_cnn_human_detecotr.hpp
object_tracking/tracker/: fixed_size_trackers.hpp
stitching/: CMakeLists.txt  README.md  feature_stitch.cpp  feature_stitch.hpp  main.cpp  stitching.pro  utility.hpp
tic_tac_toe/: CMakeLists.txt  main.cpp
update_dlib_xml/: CMakeLists.txt  main.cpp  update_image_label.cpp  update_image_label.hpp
(+759 files in other folders)
